Add localization support for multiple languages and update existing translations
- Added German (messages_de.yml), Spanish (messages_es.yml), French (messages_fr.yml), Japanese (messages_ja.yml), and Russian (messages_ru.yml) language files for BetterLANBroadcaster.
- Updated Brazilian Portuguese (messages_br.yml) and English (messages_en.yml) translations for improved clarity and consistency.
- Introduced plugin lifecycle messages for initialization, startup, and shutdown in all language files.
- Enhanced broadcast messages to provide clearer feedback on status, delays, and configuration settings.
- Improved help and error messages across all languages for better user experience.